// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeComponent /> Render snapshot - sessionId: false 1`] = `
<Fragment>
  <Connect(LoginFormContainer) />
</Fragment>
`;

exports[`<HomeComponent /> Render snapshot - sessionId: true 1`] = `
<Fragment>
  <Connect(DashboardContainer) />
</Fragment>
`;
